--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMMLIKKhKYVoOi9opxAoIgVh5W8blb3SU&libraries=places&v=weekly&map_ids=8d193001f940fde3"
+  async
+></script>
+
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxE2_heEzD9OmVoUK_MVDNKmHwLjs9ct0&sensor=true&libraries=places,geometry,drawing&sensor=true&language=he" type="text/javascript"></script>  ‏   -->
+
+
 </head>
 <body>
   <app-root></app-root>
